--- a/client/package.json
+++ b/client/package.json
@@ -14,7 +14,8 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.19.0",
-    "stream-chat": "^8.14.2"
+    "stream-chat": "^8.14.2",
+    "stream-chat-react": "^10.20.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
