--- a/client/package.json
+++ b/client/package.json
@@ -13,6 +13,7 @@
     "firebase": "^10.6.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-loader-spinner": "^5.4.5",
     "react-router-dom": "^6.19.0",
     "stream-chat": "^8.14.2",
     "stream-chat-react": "^10.20.0"
